<?xml version="1.0"?>
<package format="2">
  <name>pathfinder</name>
  <version>0.0.0</version>
  <description>The pathfinder package</description>

  <maintainer email="stibipet@fel.cvut.cz">Petr Stibinger</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  
  <export>
  </export>
</package>
