<?xml version="1.0"?>
<package format="2">

  <name>mrs_octomap_planner</name>
  <version>1.0.0</version>
  <description>The Octomap Planner package</description>

  <maintainer email="stibipet@fel.cvut.cz">Petr Stibinger</maintainer>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_modules_msgs</depend>
  <depend>mrs_subt_planning_lib</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_edt_3d</depend>
  <depend>mrs_octomap_tools</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
